--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -36,7 +36,7 @@ body {
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  width: 26%;
+  width: 400px;
   height: 400px;
   left: 879px;
   top: 298px;
@@ -70,9 +70,17 @@ body {
   margin-bottom: 80px;
 }
 
+.envelopeMail,
+.lockPassword {
+  border: 0px;
+  background-color: #d9d9d9;
+  color: #797676;
+  margin-left: 10px;
+}
+
 .email,
 .password {
-  width: 245px;
+  width: 225px;
   margin-left: 10px;
   background-color: #d9d9d9;
   border: 0;
@@ -108,4 +116,25 @@ input::placeholder {
 
 .loginButton {
   margin-right: 20px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+
+  .logoContainer,
+  .logoContainer > img {
+    width: 300px;
+    height: 300px;
+    margin-top: -60px;
+  }
+
+  .loginPanel {
+    width: 350px;
+    height: 350px;
+    margin-left: 0;
+  }
 }
