--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -128,7 +128,14 @@ input::placeholder {
   border: 4px solid yellow;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
+  .signUpMainContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
   .container {
     flex-direction: column;
     align-items: center;
