--- a/frontend/src/css/shoppingcart.css
+++ b/frontend/src/css/shoppingcart.css
@@ -33,7 +33,11 @@ body {
   width: 100vw;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 50px;
+}
+
+.cartItems > h2 {
+  margin-bottom: 75px;
 }
 
 .cartItemDetails {
@@ -41,13 +45,14 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 200px;
+  width: 600px;
   align-items: center;
 }
 
 .cartDetails {
   display: flex;
   flex-direction: column;
+  margin-left: 200px;
 }
 
 .cartDetails > p {
@@ -61,9 +66,12 @@ body {
 .product {
   display: flex;
   flex-direction: row;
-  width: 200px;
-  justify-content: space-around;
+  width: 800px;
+  justify-content: flex-start;
   align-items: center;
+}
+.trash {
+  justify-content: flex-end;
 }
 
 .trash > button {
@@ -78,4 +86,38 @@ body {
 .cartItems > p {
   color: red;
   font-size: 25px;
+}
+
+.image > img {
+  width: 200px;
+  height: 200px;
+}
+
+@media (max-width: 600px) {
+  .shoppingCartContainer {
+    width: 100vw;
+    height: 100vh;
+    margin-left: 10px;
+  }
+
+  .headerContainer {
+    margin-top: 30px;
+  }
+
+  .cartItemDetails,
+  .product {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cartItems {
+    width: 600px;
+  }
+  .cartDetails {
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+  }
 }
