--- a/frontend/src/css/products.css
+++ b/frontend/src/css/products.css
@@ -78,8 +78,8 @@ body {
 }
 
 .productItem > img {
-  width: 200px;
-  height: 200px;
+  width: 50%;
+  height: 50%;
 }
 
 @media (max-width: 600px) {
@@ -100,5 +100,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .productItem > img {
+    width: 100%;
+    height: 100%;
   }
 }
