--- a/frontend/src/css/shoppingcart.css
+++ b/frontend/src/css/shoppingcart.css
@@ -19,7 +19,6 @@ body {
   top: 0;
   left: 0;
   z-index: 999;
-  display: flex;
   flex-direction: row;
   width: 100vw;
   height: 130px;
@@ -46,7 +45,6 @@ body {
   justify-content: center;
   align-items: center;
   width: 600px;
-  align-items: center;
 }
 
 .cartDetails {
@@ -71,7 +69,7 @@ body {
   align-items: center;
 }
 .trash {
-  justify-content: flex-end;
+  margin-left: auto;
 }
 
 .trash > button {
